--- a/Styles/login-style.css
+++ b/Styles/login-style.css
@@ -6,7 +6,8 @@ body {
 }
 
 h2 {
-    width: 140px;
+    /* width: 140px; */
+    width: max-content;
     text-align: center;
     padding: 8px 4px;
     text-shadow: 0 0 4px white, 0 0 8px blue;
@@ -22,7 +23,13 @@ h2 {
     font-family: Helvetica;
     font-weight: bold;
     width: 100%;
-    height: max-content;
+    height: 100vh;
+    position: fixed;
+    background-image: url('../images/home-bg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
 }
 
 .input-field {
@@ -32,21 +39,21 @@ h2 {
     align-items: center;
     width: 350px;
     height: max-content;
-    background-color: rgb(103, 161, 206);
+    background-color: rgba(31, 158, 213, 0.505);
     border-radius: 10px;
     padding: 10px;
     position: fixed;
-    top: 50px;
+    /* top: 50px; */
+    right: 10%;
+    box-shadow: 0 0 3px rgb(251, 250, 250), 0 0 15px rgb(8, 91, 234);
+    backdrop-filter: blur(3px);
 }
 
-.login-input-container {
-    margin-left: 30px;
-}
 
-.signup-input-field {
-    position: relative;
-    width: 400px;
-    margin-top: -35px;
+.login-input-container i {
+    display: inline-block;
+    width: 25px;
+    height: 30px;
 }
 
 table p {
@@ -59,18 +66,20 @@ table p {
     margin-bottom: 18px;
     margin-left: 10px;
     border: none;
-    /* border-bottom: 2px solid gray; */
+    /* border-bottom: 6px solid gray; */
     border-radius: 5px;
     padding: 3px 8px;
     background-color: rgb(200, 239, 226);
     transition-duration: 0.3s;
+    box-shadow: none;
 }
 
 .login-input:focus {
-    width: 180px;
     outline: none;
+    outline: 2px solid greenyellow;
+    box-shadow: 0 0 6px rgb(60, 33, 236);
     background-color: rgb(228, 214, 196);
-    transition-duration: 0.3s;
+    transition: box-shadow ease 0.1s;
 }
 
 
@@ -78,7 +87,8 @@ td {
     width: 200px;
 }
 
-td.input-labels, label {
+td.input-labels,
+label {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
     font-size: 14px;
@@ -94,7 +104,8 @@ form {
 
 
 /* --LOGIN button */
-#login-btn {
+#login-btn,
+#otp-btn {
     cursor: pointer;
     padding: 9px 22px;
     color: rgb(222, 222, 222);
@@ -109,10 +120,11 @@ form {
     box-shadow: 1px 1px 3px black;
 }
 
-#login-btn:hover {
+#login-btn:hover,
+#otp-btn:hover {
     box-shadow: 2px 1px 4px black;
     background-color: rgb(39, 35, 255);
-    transition-duration: 0.1s;
+    transition:all 0.2s ease;
     color: white;
 }
 
@@ -146,9 +158,37 @@ form {
     color: rgba(181, 8, 8, 1);
     font-size: 13px;
     margin-top: -15px;
-    margin-left: -10px;
-    width: 250px;
+    margin-left: 40px;
+    display: inline-block;
+    height: 15px;
+    width: max-content;
     text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
+}
+
+.intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: max-content;
+    height: 200px;
+    position: fixed;
+    left: 10%;
+    z-index: -10;
+    border-radius: 15px;
+    padding: 10px;
+    padding-bottom: 20px;
+    /* border: 3px solid red; */
+    box-shadow: 0 0 4px black , 1px 1px 10px red, -1px -1px 10px blue;
+    animation: intro 2s 0s ease-in infinite ;
+}
+
+@keyframes intro {
+    50%{
+        box-shadow: 0 0 4px rgb(17, 17, 17), 1px 1px 10px blue, -1px -1px 10px red;
+    }
+    100% {
+        box-shadow: 0 0 4px rgb(17, 17, 17), 1px 1px 10px red, -1px -1px 10px blue;
+    }
 }
