--- a/Styles/appointment.css
+++ b/Styles/appointment.css
@@ -1,25 +1,29 @@
-.appointments,.new-appointment{
-    margin:0;
-    display:flex;
-    flex-direction:row;
-    align-items:center;
-    /* justify-content:space-around; */
+/* Common styles for both sections */
+.appointments, .new-appointment {
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     flex-wrap: wrap;
 }
-.appointment,.choose-doctor{
+
+.choose-doctor, .appointment {
     margin: 0 10px;
-    border-top:1px solid gray;
-    border-bottom:1px solid gray;
-    margin-bottom:20px;
-    padding:20px 10px;
-    height:240px;
-    width:200px;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    margin-bottom: 20px;
+    padding: 20px 10px;
+    height: auto;
+    width: 200px;
     display: flex;
     flex-direction: column;
-    /* align-items: center;
-    justify-content: center; */
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
 }
-.choose-doctor img{
+
+/* Specific styles for doctor section */
+.choose-doctor img {
     padding-bottom: 10px;
     border-radius: 40px;
     height: 160px;
@@ -27,5 +31,8 @@
     margin: auto;
     display: block;
 }
-
-
+.appointment-datetime{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
