--- a/Styles/appointment.css
+++ b/Styles/appointment.css
@@ -9,16 +9,16 @@
 
 .choose-doctor, .appointment {
     margin: 0 10px;
-    border-top: 1px solid gray;
-    border-bottom: 1px solid gray;
+    /* border-top: 1px solid gray; */
+    border-bottom: 1px solid rgba(16, 15, 15, 0.559);
     margin-bottom: 20px;
     padding: 20px 10px;
     height: auto;
     width: 200px;
     display: flex;
     flex-direction: column;
-    background-color: #f9f9f9;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
 }
 
