--- a/Styles/dashboard.css
+++ b/Styles/dashboard.css
@@ -1,41 +1,48 @@
-body{
-    box-sizing:border-box;
-    margin:0;
+body {
+    box-sizing: border-box;
+    margin: 0;
     padding: 0;
     overflow-x: hidden;
 
 }
-a{
+
+a {
     text-decoration: none;
 }
-.section-body{
-    display:flex;
-    color:black;
+
+.section-body {
+    display: flex;
+    color: black;
 }
+
 .patient{
-  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: calc(max-content+40px);
     padding: 20px 0px;
-
 }
 
-.left-body{
+
+.left-body {
     position: fixed;
     border-right: 2px solid rgb(205, 203, 203);
     width: 200px;
     height: 100vh;
-    background: whitesmoke;
+    background: rgba(125, 199, 236, 0.934);
     padding: 20px;
     display: flex;
-    box-sizing:border-box;
+    box-sizing: border-box;
     flex-direction: column;
-   
 }
+
 .right-body.home {
     margin-left: 200px;
     height: 100vh;
     width: calc(100% - 200px);
-    position: relative; 
-    overflow-x: hidden; 
+    position: relative;
+    overflow-x: hidden;
     background-image: url('../images/home-bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -44,9 +51,9 @@ a{
 }
 
 
-.nav-con{
- 
-    background:rgb(20, 16, 216);
+.nav-con {
+
+    background: rgb(20, 16, 216);
     height: 50px;
     display: flex;
     width: 100%;
@@ -54,15 +61,22 @@ a{
     justify-content: space-between;
 
 }
-.nav-con.h3{
+
+.nav-con.h3 {
     color: white;
     padding: 0px 20px;
 
 
 }
-#res{
-    padding:0px 20px;
+
+#res {
+    padding: 0px 20px;
     display: flex;
     flex-direction: column;
 
+}
+
+p.username {
+    font-weight: bold;
+    width: max-content;
 }
