--- a/Styles/style-prev.css
+++ b/Styles/style-prev.css
@@ -40,34 +40,39 @@ body {
 .logout-btn {
     margin:8px 0px;
     cursor: pointer;
-    background-color: rgb(66, 81, 255);
+    background-color: rgba(0, 0, 0, 0.1);
     padding: 6px 11px;
     border: none;
     border-radius: 3px;
     font-size: 14px;
     letter-spacing: 1px;
     text-transform: uppercase;
-    color: white;
+    color: black;
+    border: 3px solid black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    box-shadow: 1px 1px 3px black;
+    box-shadow: 0px 0px 2px black;
     transition-duration: 0.3s;
+}
+
+.logout-btn a{
+    text-decoration: none;
+    color: black;
 }
 
 .logout-btn:hover,
 #login-button:hover {
     border-radius: 5px;
     letter-spacing: 1px;
-    color: rgba(233, 238, 211, 0.805);
-    box-shadow: 2px 2px 4px black, 2px 2px 3px rgb(43, 19, 252);
-    background-color: blue;
+    color: white;
+    /* box-shadow: 2px 2px 4px black, 2px 2px 3px rgb(43, 19, 252); */
+    background-color: rgb(0,0,0,0.2);
     transition-duration: 0.2s;
 }
 
 .logout-btn:active {
     color: white;
-    margin-top: 1px;
-    background-color: rgba(35, 35, 251, 0.803);
+    background-color: transparent;
     transition-duration: 0.3s;
 }
 
